<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingLeft="8dp"
            android:paddingTop="30dp">

            <RelativeLayout
                android:id="@+id/drawer_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_profile_edt_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="3dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_maps_and_flags" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/user_detail_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@+id/rl_profile_edt_img"
                    android:orientation="vertical"
                    android:paddingTop="13dp">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Digital Bharat"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="vanasa_dono@gmail.com"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/small_text" />

                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/drawer_header"
                android:layout_marginTop="20dp"
                android:layout_weight="13"
                android:orientation="vertical"
                android:weightSum="11">

                <LinearLayout
                    android:id="@+id/menu_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_christmas_tree" />

                    <TextView
                        android:id="@+id/btn_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_1"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/btn_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_2"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/menu_scheduled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_kite" />

                    <TextView
                        android:id="@+id/btn_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_3"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/invite_and_earn_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@mipmap/ic_saraswati" />

                    <TextView
                        android:id="@+id/btn_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_4"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/menu_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_india" />

                    <TextView
                        android:id="@+id/btn_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_5"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/menu_setting2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera" />

                    <TextView
                        android:id="@+id/btn_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_6"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/contactus_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_lotus" />

                    <TextView
                        android:id="@+id/btn_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_7"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/aboutus_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_holi" />

                    <TextView
                        android:id="@+id/btn_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_8"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/privacy_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_shiva" />

                    <TextView
                        android:id="@+id/btn_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/option_txt_9"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_video_camera" />

                    <TextView
                        android:id="@+id/btn_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/txt_option_10"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</ScrollView>


